src/components/film_card.module.css
.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    padding: 10px;
    --glow_base_color: white;
    --glow_success_color: rgb(114, 240, 114);
    --glow_failure_color: rgb(240, 114, 114);
    --glow_color: var(--glow_base_color);
    --glow_radius: 10px;
    --glow_radius_hover: 20px;
}

.card img {
    width: 300px;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 0 var(--glow_radius) var(--glow_color);
}

.card:hover img {
    box-shadow: 0 0 var(--glow_radius_hover) var(--glow_color);
}

.card.success {
    --glow_color: var(--glow_success_color)
}

.card.failure {
    --glow_color: var(--glow_failure_color)
}

.card.failure,
.card.success {
    --glow_radius: 40px;
    --glow_radius_hover: 40px;
}

.result img {
    width: 200px;
    box-shadow: none;
}



.title {
    font-weight: 700;
}

.rating {
    font-size: x-large;
    color: gold;
    text-shadow: 0 0 5px yellow;
}

.card > * {
    max-width: 400px;
}

.result {
    width: 40%;
}

.stacked_layout {
    visibility: visible;
}

.compact_layout {
    visibility: collapse;
}

@media screen and (max-width: 850px) {
    .game_card {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    .card > * {
        max-width: 100%;
    }

    .game_card img {
        width: 150px;
    }

    .result {
        justify-content: flex-start;
        width: 40%;
    }

    .result .title {
        font-size: 15px;
        font-weight: 400;
    }

    .result img {
        width: 100px;
    }

    .stacked_layout {
        visibility: collapse;
    }

    .compact_layout {
        visibility: visible;
    }

    .movie_info {
        display: flex;
        flex-direction: column;
        max-width: 100px;
    }

}

